--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [master, main]
     paths:
-      - "aws-integrations/lambda-integrations/**"
+      - "aws-integrations/lambda-integrations/**/template.yaml"
 jobs:
   upload_files:
     runs-on: ubuntu-latest
