--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -34,9 +34,9 @@ jobs:
             echo $integration
             echo 2
             echo $changed_file
-            if [[ $changed_file == "aws-integrations/lambda-integrations/$integration/template.yaml" ]]; then
+            if [[ $changed_file == "**/$integration/template.yaml" ]]; then
               if echo "$integration_list" | grep -q "$integration"; then
-                mv aws-integrations/lambda-integrations/$integration/template.yaml template-directory/${integration}-template.yaml
+                mv $changed_file template-directory/${integration}-template.yaml
                 echo $integration >> changed-integration.txt
               fi
             fi
