--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -98,7 +98,11 @@ jobs:
 
       - name: apply changes to the files
         run: |
-          branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
+          if echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
+            branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
+          else
+            branch_name=update_integration-branch
+          fi
           git pull origin master
           git checkout -b ${branch_name}
           sync_branch_exists=$(git ls-remote --heads origin "${branch_name}" | wc -l)
@@ -131,8 +135,13 @@ jobs:
 
       - name: Create pull request
         run: |
-          branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
-          Pr_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 1)
+          if echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
+            branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
+            Pr_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 1)
+          else
+            branch_name=update_integration-branch
+            Pr_name="${{ github.event.head_commit.message }}"
+          fi
           pr_exists=$(gh pr list --base master --head "${branch_name}" --json number -q '.[].number')
           if [[ -n "$pr_exists" ]]; then
             echo "Pull request already exists: #$pr_exists"
